--- a/Paper/Supplements_Review.tex
+++ b/Paper/Supplements_Review.tex
@@ -131,13 +131,13 @@
 \begin{figure}
 \centering
 \includegraphics[width=16cm,height=18cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figResult2_all_together_Supplements-1.pdf}
-\caption{\label{fig:figResult2_sup} Comparison between the simple and extended pulse one true and inferred segment length and ALD decay estimates using an empirical recombination map (HapMap) for simulations with a fixed mean time ($t_m$) of 1500 generations ago and varying durations ($t_d$). Genetic distances are assigned either using a constant rate (HapMap/Constant) or the AAMap (HapMap/AAMap). All times are given in generations. A) log likelihood ratios between the two models for segment data and normalized difference between the residual sum-of-squares between the two models for ALD data. B) Mean time estimates of admixture and extended pulse estimate for admixture duration. Solid black line indicates true $t_m$ and $t_d$, red dotted line indicates migration corrected admixture time ($t_m$(1-m)). C) Comparison of the fit to data between the simple and extended pulse using true and estimated parameters. }
+\caption{\label{fig:figResult2_sup} Comparison between the simple and extended pulse on true and inferred segment length and ALD decay estimates using an empirical recombination map (HapMap) for simulations with a fixed mean time ($t_m$) of 1,500 generations ago and varying durations ($t_d$). Genetic distances are assigned either using a constant rate (HapMap/Constant) or the AAMap (HapMap/AAMap). All times are given in generations. A) Log likelihood ratios between the two models for segment data and normalized difference between the residual sum-of-squares between the two models for ALD data. B) Mean time estimates of admixture and extended pulse estimate for admixture duration. Solid black line indicates true $t_m$ and $t_d$, red dotted line indicates migration corrected admixture time ($t_m$(1-m)). C) Comparison of the fit to data between the simple and extended pulse using true and estimated parameters. }
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[width=12cm,height=16cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figResult_3_GLM_SP_and_EP_bias-1.pdf}
-\caption{\label{fig:figGLM_deviation} GLM effect sizes for the deviation between simulated and estimated mean admixture time  and 95\% C.I. for the parameters between the simple and extended pulse model: gene flow (simple/extended), recombination rate (constant/varying), demography (simple/complex), minimal genetic distance (0.02/0.05 cM), SNPs used for ALD calculation (100 \% / 5 \%) and ascertainment scheme (LES/HES). Estimates are calculated across all possible combinations of parameters and are given as the estimate of the standard model plus the respective parameter estimate. Dotted horizontal line indicates unbiased admixture estimates.}
+\caption{\label{fig:figGLM_deviation} GLM effect sizes for the deviation between simulated and estimated mean admixture time  and 95\% C.I. for the parameters between the simple and extended pulse model: gene flow (simple/extended), recombination rate (constant/varying), demography (simple/complex), minimal genetic distance (0.02/0.05 cM), SNPs used for ALD calculation (100 \% / 5 \%) and ascertainment scheme (LES/HES). Estimates are calculated across all possible combinations of parameters. Dotted horizontal line indicates unbiased admixture estimates.}
 \end{figure}
 
 \begin{figure}
@@ -177,7 +177,7 @@ model & GLM & variable & mean & 5.5\% & 94.5\% & n eff & Rhat\\
 
  & bias & Extended Pulse & -0.17 & -0.21 & -0.13 & 2439 & 1\\
 
- & bias & Varying recombination & -1.22 & -1.29 & -1.16 & 2521 & 1\\
+ & bias & Varying Recombination & -1.22 & -1.29 & -1.16 & 2521 & 1\\
 
  & bias & Complex Demography & -0.27 & -0.33 & -0.22 & 2488 & 1\\
 
@@ -201,7 +201,7 @@ model & GLM & variable & mean & 5.5\% & 94.5\% & n eff & Rhat\\
 
  & bias & Extended Pulse & -0.11 & -0.15 & -0.07 & 2650 & 1\\
 
- & bias & Varying recombination & -0.74 & -0.80 & -0.67 & 2284 & 1\\
+ & bias & Varying Recombination & -0.74 & -0.80 & -0.67 & 2284 & 1\\
 
  & bias & Complex Demography & -0.43 & -0.49 & -0.38 & 2678 & 1\\
 
