--- a/Paper/Supplements_Review.tex
+++ b/Paper/Supplements_Review.tex
@@ -72,7 +72,7 @@
 \usepackage{setspace}
 \onehalfspacing
 \usepackage[left]{lineno}
-\linenumbers
+%\linenumbers
 \usepackage[none]{hyphenat}
 \usepackage{amsfonts}
 \usepackage{amssymb}
